@@ -321,6 +321,10 @@ public:
 					// Update chunks after NPC moved.
 	virtual void switched_chunks(Map_chunk *, Map_chunk *)
 		{  }
+					// Update schedule for new 3-hour time.
+	virtual void update_schedule(Game_window *gwin, int hour3, 
+					int backwards = 0, int delay = -1)
+		{  }
 					// Render.
 	virtual void paint(Game_window *gwin);
 					// Run usecode function.
@@ -453,8 +457,6 @@ public:
 	int inventory_shapenum();
 
 	bool was_hit() { return hit; }
-
-	virtual bool update_forced_schedule() { return false; }
 	};
 
 /*
@@ -507,7 +509,6 @@ class Npc_actor : public Actor
 					//   to avoid being added twice.
 protected:
 	unsigned char num_schedules;	// # entries below.
-	bool force_update;		// Force schedule update
 	Schedule_change *schedules;	// List of schedule changes.
 	int find_schedule_change(int hour3);
 public:
@@ -533,10 +534,8 @@ public:
 	void movef(Map_chunk *old_chunk, Map_chunk *new_chunk, 
 		int new_sx, int new_sy, int new_frame, int new_lift);
 					// Update schedule for new 3-hour time.
-	void update_schedule(Game_window *gwin, int hour3, int backwards = 0,
-							int delay = -1);
-	virtual bool update_forced_schedule();
-	void set_force_update() { force_update = true; }
+	virtual void update_schedule(Game_window *gwin, int hour3, 
+					int backwards = 0, int delay = -1);
 					// Render.
 	virtual void paint(Game_window *gwin);
 					// Run usecode function.
